# rshrink

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  index.html  index.js  package.json  server.py  wasm-compile-serve.sh  wasm-worker.js  worker.js
src/: filesystem.rs  gui.rs  imagemagick.rs  lib.rs  main.rs  resizer.rs  threadpool.rs  utils.rs
