[package]
name = "rshrink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ffmpeg-next = "5.0.3"
magick_rust = "0.16.0"
regex = "1"
clap = { version = "3.1.8", features = ["derive"] }
num_cpus = "1.0"
eframe = "0.18.0"
rfd = "0.8.2"