[package]
name = "rshrink"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
num_cpus = "1.0"
eframe = { version = "0.18.0", features = ["persistence"] }
rfd = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.2"
resize = "0.7.3"
rgb = "0.8.33"
futures = "0.3"
rayon = "1.5.3"
# ffmpeg-next = "5.0.3"
# clap = { version = "3.1.8", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
# debug = true


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-rayon = {version = "1.0.3", features = ["no-bundler"]}
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.82"